OAK-11105: fix review comments