@@ -16,6 +16,7 @@
  */
 package org.apache.jackrabbit.oak.spi.whiteboard;
 
+import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -41,7 +42,7 @@ public class DefaultWhiteboardTest {
         whiteboard.register(Service2.class, new Service2("s2"), Map.of("role", "myrole"));
         whiteboard.register(Service3.class, new Service3("s3_1"), Map.of());
         whiteboard.register(Service3.class, new Service3("s3_2"), Map.of("role", "myrole"));
-        whiteboard.register(Service3.class, new Service3("s3_3"), Map.of("role", "myotherrole", "id", 1024));
+        whiteboard.register(Service3.class, new Service3("s3_3"), ImmutableMap.of("role", "myotherrole", "id", 1024));
 
         assertEquals(Set.of("s1"), track(Service1.class));
         assertEquals(Set.of("s1"), track(Service1.class, singletonMap("role", null)));
@@ -55,7 +56,7 @@ public class DefaultWhiteboardTest {
         assertEquals(Set.of("s3_1"), track(Service3.class, singletonMap("role", null)));
         assertEquals(Set.of("s3_2"), track(Service3.class, Map.of("role", "myrole")));
         assertEquals(Set.of("s3_3"), track(Service3.class, Map.of("role", "myotherrole")));
-        assertEquals(Set.of("s3_3"), track(Service3.class, Map.of("role", "myotherrole", "id", "1024")));
+        assertEquals(Set.of("s3_3"), track(Service3.class, ImmutableMap.of("role", "myotherrole", "id", "1024")));
         assertEquals(Set.of("s3_3"), track(Service3.class, Map.of("id", "1024")));
         assertEquals(Set.of(), track(Service3.class, Map.of("id", "2048")));
     }
@@ -77,7 +78,7 @@ public class DefaultWhiteboardTest {
         Registration r2 = whiteboard.register(Service2.class, new Service2("s2"), Map.of("role", "myrole"));
         Registration r3_1 = whiteboard.register(Service3.class, new Service3("s3_1"), Map.of());
         Registration r3_2 = whiteboard.register(Service3.class, new Service3("s3_2"), Map.of("role", "myrole"));
-        Registration r3_3 = whiteboard.register(Service3.class, new Service3("s3_3"), Map.of("role", "myotherrole", "id", 1024));
+        Registration r3_3 = whiteboard.register(Service3.class, new Service3("s3_3"), ImmutableMap.of("role", "myotherrole", "id", 1024));
 
         assertEquals(Set.of("s1"), track(Service1.class));
         r1.unregister();
